src/objects/KPI_Calulation_Condition__c.object
<CustomObject>
    <fields>
        <fullName>Formula__c</fullName>
        <label>KPI Calculation Formula</label>
        <referenceTo>KPI_Calculation_Formula__c</referenceTo>
        <relationshipLabel>KPI Calulation Conditions</relationshipLabel>
        <relationshipName>KPI_Calulation_Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Index_Label__c</fullName>
        <label>Index Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>KPI Calulation Condition</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Calulation Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>